# sheetmask

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/plans/: 2026-02-20-excel-anonymizer.md
src/excel_anonymizer/: analyzer.py  cli.py  entity_mapper.py  executor.py  filename_parser.py  multi_analyzer.py  rules.py
src/sheetmask/: __init__.py  analyzer.py  cli.py  entity_mapper.py  executor.py  filename_parser.py  multi_analyzer.py  rules.py
tests/: create_fixtures.py  test_cli.py  test_entity_mapper.py  test_filename_parser.py  test_integration.py  test_rules.py
tests/fixtures/: 2024-Q4 Team Roster.xlsx  Dec-24 Revenue Report.xlsx  revenue_report_config.py  team_roster_config.py
