[project]
name = "sheetmask"
dynamic = ["version"]
description = "CLI for creating PII-safe Excel test fixtures"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyxlsb>=1.0.10",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "faker>=20.0.0",
]

[project.urls]
Repository = "https://github.com/daniel-butler/sheetmask"

[project.scripts]
sheetmask = "sheetmask.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
